--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ source=~/.config/hypr/mocha.conf
 # exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors 28
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-exec-once=waybar & swaync & hyprpaper & hypridle & systemctl --user start hyprpolkitagent & xdgdesktop.sh
+exec-once=waybar & swaync & hyprpaper & hypridle # & systemctl --user start hyprpolkitagent & xdgdesktop.sh
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
@@ -26,20 +26,20 @@ monitor=eDP-1,preferred,auto,1
 #input:cursor_size=24
 
 #=========================================================
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+#xec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+#exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = udiskie
+#exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+#exec-once = udiskie
 
 exec-once = hyprctl  setcursor Bibata-Modern-Classic 24
 #env = LIBVA_DRIVER_NAME,nvidia
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
-exec = export XDG_SESSION_TYPE=wayland
-exec = export QT_QPA_PLATFORM=wayland
-exec = export MOZ_ENABLE_WAYLAND=1
+# exec = export XDG_SESSION_TYPE=wayland
+# exec = export QT_QPA_PLATFORM=wayland
+# exec = export MOZ_ENABLE_WAYLAND=1
 
 
 #=========================================================
@@ -62,12 +62,12 @@ xwayland {
 
 #env = Bibata-Modern-Classic,MyCursor
 #env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,MyCursor
-env = HYPRCURSOR_SIZE,24
+#env = HYPRCURSOR_THEME,MyCursor
+#env = HYPRCURSOR_SIZE,24
 
 #env= XCURSOR_THEME,Bibata-Modern-Classic
 # Some default env vars.
-#env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -76,7 +76,7 @@ input {
     kb_variant =
     kb_model =
     kb_options =
-    kb_rules =
+    kb_rules = 
     kb_options = ctrl:nocaps
 
     follow_mouse = 1
@@ -133,6 +133,8 @@ animations {
     animation=workspaces,1,0.5,default
     animation=windows,0,0.1,default
     animation=fade,0,0.1,default
+
+    
 }
 
 dwindle {
@@ -185,7 +187,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 #============================================================
 
-bind = $SUPER_SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+# bind = $SUPER_SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 
 #============================================================
