--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/backgrounds/shaded.png
-wallpaper = , ~/.config/backgrounds/shaded.png
+preload = /home/shehab/dotfiles/wallpapers_catppuccin/night-forest-path.png
+wallpaper = , /home/shehab/dotfiles/wallpapers_catppuccin/night-forest-path.png
