--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,10 +3,31 @@
 include current-theme.conf
 # END_KITTY_THEME
 #
+#cursor_shape beam
 
-font_family CaskaydiaCove Nerd Font Mono
+# Cursor settings
+cursor_shape block
+
+# Optional: Make kitty use true color
+allow_hyperlinks yes
+detect_urls      yes
+strip_trailing_spaces always
+
+# Optional: Scrollback
+scrollback_lines 10000
+
+# Optional: Theme (you can comment this out or replace it with your own)
+#foreground       #d0d0d0
+#background       #1e1e2e
+#selection_foreground #1e1e2e
+#selection_background #c0caf5
+
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="SFMono Nerd Font Mono"
+font_size       16.0
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-
-font_size 14
+# END_KITTY_FONTS
