--- a/swaync/.config/swaync/config.json
+++ b/swaync/.config/swaync/config.json
@@ -1,93 +1,93 @@
 {
-  "$schema": "$XDG_CONFIG_HOME/swaync/configSchema.jsonc",
-  "control-center-height": 2,
-  "control-center-layer": "overlay",
-  "control-center-margin-bottom": 20,
-  "control-center-margin-left": 0,
-  "control-center-margin-right": 10,
-  "control-center-margin-top": 20,
-  "control-center-width": 500,
-  "cssPriority": "application",
-  "control-center-positionX":"right",
-  "control-center-positionY":"center",
-  "fit-to-screen": true,
-  "hide-on-action": false,
-  "hide-on-clear": true,
-  "image-visibility": "when-available",
-  "keyboard-shortcuts": true,
-  "layer": "layer",
-  "notification-body-image-height": 100,
-  "notification-body-image-width": 200,
-  "notification-icon-size": 40,
-  "notification-inline-replies": true,
-  "notification-visibility": {},
-  "notification-window-width": 400,
   "positionX": "right",
   "positionY": "top",
-  "script-fail-notify": true,
-  "scripts": {},
   "timeout": 10,
-  "timeout-critical": 0,
   "timeout-low": 5,
-  "transition-time": 100,
-  "widget-config": {
-    "buttons-grid": {
-      "actions": [
-        {
-          "active": false,
-          "command": "notify-send 'hey'",
-          "label": "󰤄",
-          "type": "toggle",
-          "update_command": "notify-send 'Hi'"
-        },
-        {
-          "active": false,
-          "command": "swaync-client -d",
-          "label": "",
-          "type": "toggle"
-        },
-        {
-          "active":false,
-          "command":"obs",
-          "label":"󰄀",
-          "type": "button"
-        },
-        {
-          "active":false,
-          "command":"obs",
-          "label":"󰕧",
-          "type": "button"
-        },
-        {
-          "active": false,
-          "command": "systemctl poweroff",
-          "label": "",
-          "type": "toggle"
-        }
-      ]
+  "timeout-critical": 0,
+  "control-center-width": 500,
+  "notification-window-width": 500,
+  "keyboard-shortcuts": true,
+  "image-visibility": "always",
+  "transition-time": 200,
+  "hide-on-clear": true,
+  "hide-on-action": true,
+  "control-center-margin-top": 0,
+  "control-center-margin-bottom": 0,
+  "control-center-margin-right": 0,
+  "control-center-margin-left": 0,
+  "$schema": "/etc/xdg/swaync/configSchema.json",
+  "layer": "overlay",
+  "control-center-layer": "top",
+  "layer-shell": true,
+  "layer-shell-cover-screen": true,
+  "cssPriority": "application",
+  "notification-2fa-action": true,
+  "notification-inline-replies": false,
+  "notification-icon-size": 64,
+  "notification-body-image-height": 100,
+  "notification-body-image-width": 200,
+  "fit-to-screen": true,
+  "relative-timestamps": true,
+  "control-center-height": 600,
+  "text-empty": "No Notifications",
+  "script-fail-notify": true,
+  "scripts": {
+    "example-script": {
+      "exec": "echo 'Do something...'",
+      "urgency": "Normal"
     },
-    "mpris": {
-      "image-radius": 12,
-      "image-size": 96
+    "example-action-script": {
+      "exec": "echo 'Do something actionable!'",
+      "urgency": "Normal",
+      "run-on": "action"
+    }
+  },
+  "notification-visibility": {
+    "example-name": {
+      "state": "muted",
+      "urgency": "Low",
+      "app-name": "Spotify"
+    }
+  },
+  "widgets": [
+    "inhibitors",
+    "title",
+    "dnd",
+    "notifications"
+  ],
+  "widget-config": {
+    "inhibitors": {
+      "text": "Inhibitors",
+      "button-text": "Clear All",
+      "clear-all-button": true
     },
     "title": {
       "text": "Notifications",
-      "button-text": "󰎟 Clear",
-      "clear-all-button": true      
+      "clear-all-button": true,
+      "button-text": "Clear All"
     },
-    "volume": {
-      "label": "",
-        "show-per-app": true,
-        "show-per-app-icon": true,
-        "show-per-app-label":true
+    "dnd": {
+      "text": "Do Not Disturb"
+    },
+    "label": {
+      "max-lines": 5,
+      "text": "Label Text"
+    },
+    "mpris": {
+      "image-size": 96,
+      "image-radius": 12,
+      "blacklist": []
+    },
+    "buttons-grid": {
+      "actions": [
+        {
+          "label": "\ufaa8",
+          "type": "toggle",
+          "active": true,
+          "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
+          "update-command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
+        }
+      ]
     }
-},
-
-  "widgets": [
-    "title",
-    "notifications",
-    "buttons-grid",
-    "mpris",
-    "volume"
-  ]
+  }
 }
