--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-  lock_cmd = pidof hyprlock || hyprlock
+  lock_cmd = hyprctl switchxkblayout all 0 & pidof hyprlock || hyprlock
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on
 }
@@ -21,9 +21,9 @@ listener {
   on-resume = hyprctl dispatch dpms on
 }
 
-# listener {
-#   timeout = 1800
-#   on-timeout = systemctl suspend
-# }
+ listener {
+   timeout = 1800
+   on-timeout = systemctl suspend
+ }
 
 exec-onlid-close = pidof hyprlock || hyprlock
