--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once =  wl-paste --watch cliphist store
 
 exec = uwsm app -- gnome-keyring-daemon --start --components=secrets
 
-exec-once = uwsm app -- hyprpaper & uwsm app -- hypridle & uwsm app -- swaync
+exec-once = uwsm app -- waypaper --restore & uwsm app -- hypridle & uwsm app -- swaync
 
 exec-once =  uwsm app -- waybar 
 # & uwsm app -- waybar -c "${XDG_CONFIG_HOME}/waybar/config2.jsonc"
@@ -77,7 +77,8 @@ general {
 
 input {
     kb_layout = us,eg
-    kb_options=grp:alt_shift_toggle 
+#    kb_options=grp:alt_shift_toggle 
+    kb_options = caps:swapescape
     repeat_rate = 25
     repeat_delay = 600
     follow_mouse = 1
@@ -209,13 +210,13 @@ $browser= brave
 bind = $mainMod, Q, exec,uwsm app -- $terminal
 bind = $mainMod, W, exec, uwsm app -- $browser
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, M, exec, ${XDG_CONFIG_HOME}/rofi/scripts/powermenu_t2
 bind = $mainMod, E, exec,uwsm app -- $fileManager
 bind = $mainMod, x, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, space, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindleb
-bind = $mainMod, w,exec,exec,uwsm app -- $browser
+bind = $mainMod ,w,exec,exec, uwsm app -- $browser
 #bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, V, exec,rofi -modi clipboard:/home/shehab/.config/rofi/cliphist-rofi-img -show clipboard -show-icons -theme '/home/shehab/.config/rofi/catppuccin-clipboard.rasi'
 
@@ -226,7 +227,7 @@ bind = $mainMod, V, exec,rofi -modi clipboard:/home/shehab/.config/rofi/cliphist
 # bind = $mainMod, D, layoutmsg, cyclenext            # (master)
 
 
-# bind = SUPER, n, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next
+ bind = $mainMod, n, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next
 
 
 
@@ -315,16 +316,33 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+
+
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+ windowrulev2 = float, class:^(waypaper)$
+
+ windowrulev2 = float, class:^(fdm)$
+
+ windowrulev2 = float, class:^(engrampa)$
+
+ windowrulev2 = float, class:^(eu.betterbird.Betterbird)$
+
+ windowrulev2 = float, class:^(kitty-dropterm)$
 
 xwayland {
   force_zero_scaling = true
 }
+
+#=====================================
+#                                   ||
+#              plugin               ||
+#                                   ||
+#=====================================
 
 exec-once = hyprpm reload -n
 
@@ -478,7 +496,13 @@ bind = ALT, TAB, hyprexpo:expo, toggle
 
 exec-once = /usr/bin/pypr
 
+
 bind = $mainMod,A,exec,pypr toggle term
+
+bind = $mainMod,U,exec,pypr toggle email
+
+bind = $mainMod,D,exec,pypr toggle fdm
+
 #bind = $mainMod,Y,exec,pypr attach
 
 
