--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -2,12 +2,12 @@ background {
     monitor =
     path = screenshot
     color = rgba(25, 20, 20, 1.0)
-    blur_passes = 2
+    blur_passes = 3
 }
 
 
 input-field {
-    monitor =
+#    monitor =
     size = 20%, 5%
     outline_thickness = 3
     inner_color = rgba(0, 0, 0, 0.0) # no fill
