improved the readme file and added missing packages

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once =  wl-paste --watch cliphist store
 
 exec = uwsm app -- gnome-keyring-daemon --start --components=secrets
 
-exec-once = uwsm app -- waypaper --restore & uwsm app -- hypridle & uwsm app -- swaync
+exec-once = uwsm app -- swww-daemon & uwsm app -- hypridle & uwsm app -- swaync
 
 exec-once =  uwsm app -- waybar 
 # & uwsm app -- waybar -c "${XDG_CONFIG_HOME}/waybar/config2.jsonc"
@@ -334,6 +334,8 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
  windowrulev2 = float, class:^(kitty-dropterm)$
 
+ windowrulev2 = float, class:^(blueman-manager)$
+
 xwayland {
   force_zero_scaling = true
 }
@@ -499,9 +501,11 @@ exec-once = /usr/bin/pypr
 
 bind = $mainMod,A,exec,pypr toggle term
 
-bind = $mainMod,U,exec,pypr toggle email
+bind = $mainMod,B,exec,pypr toggle email
 
 bind = $mainMod,D,exec,pypr toggle fdm
+
+bind = $mainMod,S,exec,pypr toggle whatsapp
 
 #bind = $mainMod,Y,exec,pypr attach
 
